feat: add reference section

--- a/data/blog/big-data.mdx
+++ b/data/blog/big-data.mdx
@@ -52,7 +52,7 @@ These services work together to optimize execution and resource usage in the Had
 A typical Hadoop cluster consists of three types of nodes, each serving a specific purpose in the distributed processing framework.
 
 ![Hadoop Cluster](/static/images/resource/big-data/03hadoop-hw.png)
-_Image source: [Self Learning Java Tutorial - What is Edge Node in Hadoop](https://self-learning-java-tutorial.blogspot.com/2022/03/what-is-edge-node-in-hadoop.html)_
+_Source: [Self Learning Java Tutorial - What is Edge Node in Hadoop](https://self-learning-java-tutorial.blogspot.com/2022/03/what-is-edge-node-in-hadoop.html)_
 
 #### Edge Node
 
@@ -100,7 +100,7 @@ Hive consists of two main services:
 - **Metastore**: The table catalog that maintains metadata about tables and partitions
 
 ![Hive Architecture](/static/images/resource/big-data/05HDFS.png)
-_Image source: [Stack Overflow - What is use of HCatalog in Hadoop](https://stackoverflow.com/questions/22533814/what-is-use-of-hcatalog-in-hadoop)_
+_Source: [Stack Overflow - What is use of HCatalog in Hadoop](https://stackoverflow.com/questions/22533814/what-is-use-of-hcatalog-in-hadoop)_
 
 ### HBase: Distributed NoSQL Database
 
@@ -192,3 +192,9 @@ Search engines provide powerful capabilities for finding and analyzing data acro
 - Offers dynamic clustering and text analysis
 - Can ingest domain-specific taxonomies and dictionaries
 - Scales horizontally to handle growing data volumes
+
+## References
+
+- Lecture notes from Business Analytics course, Prof. Paolo Menna, University of Verona 2024-2025
+- [Self Learning Java Tutorial - What is Edge Node in Hadoop](https://self-learning-java-tutorial.blogspot.com/2022/03/what-is-edge-node-in-hadoop.html)
+- [Stack Overflow - What is use of HCatalog in Hadoop](https://stackoverflow.com/questions/22533814/what-is-use-of-hcatalog-in-hadoop)
