--- a/data/blog/data-integration-etl-pushdown.mdx
+++ b/data/blog/data-integration-etl-pushdown.mdx
@@ -114,3 +114,7 @@ In this scenario, the ETL tool is a simple **orchestrator** without any operativ
 A data orchestrator is **a tool or system** that **manages and automates the flow of data** between different systems and applications. It's essentially **a central conductor** that coordinates the movement, transformation, and integration of data from various sources into a usable format for analysis.
 
 ![Data Orchestrator Overview](/static/images/resource/data-integration-etl-pushdown/data-orchestrator.png)
+
+## References
+
+- Lecture notes from Business Analytics course, Prof. Paolo Menna, University of Verona 2024-2025
