--- a/data/blog/data-integration-loading.mdx
+++ b/data/blog/data-integration-loading.mdx
@@ -135,3 +135,8 @@ Kimball's methodology emphasizes:
 - **Conformed Dimensions**: Ensure consistency and enable drill-across analysis
 - **Grain Definition**: Each fact table represents events at a specific level of detail
 - **Slowly Changing Dimensions**: Handle changes in dimension attributes over time
+
+## References
+
+- Lecture notes from Business Analytics course, Prof. Paolo Menna, University of Verona 2024-2025
+- Kimball, R., & Ross, M. (2013). The Data Warehouse Toolkit: The Definitive Guide to Dimensional Modeling (3rd ed.). Wiley.
