--- a/data/blog/data-modeling.mdx
+++ b/data/blog/data-modeling.mdx
@@ -54,3 +54,8 @@ Physical Table Structure Should Include:
 - **Primary and/or secondary indexes** of the table to improve performance
 - **Table partitioning functions**
 - Adding **surrogate key** to simplify join, improve performance, optimize space
+
+## References
+
+- Lecture notes from Business Analytics course, Prof. Paolo Menna, University of Verona 2024-2025
+- [IBM. "Data modeling"](https://www.ibm.com/topics/data-modeling)
