--- a/data/blog/dimensional-modeling-four-step.mdx
+++ b/data/blog/dimensional-modeling-four-step.mdx
@@ -73,3 +73,7 @@ Dimension tables contain the **descriptive attributes** used by BI applications 
 - A single fact table row has a one-to-one relationship to a **measurement event** as described by the fact table's grain
 - **A Fact table** corresponds to **a physical observable event**, and not to the demands of a particular report
 - **Only facts consistent with the declared grain** are allowed
+
+## References
+
+- Lecture notes from Business Analytics course, Prof. Paolo Menna, University of Verona 2024-2025
