--- a/data/blog/dimensional-modeling-hierarchy.mdx
+++ b/data/blog/dimensional-modeling-hierarchy.mdx
@@ -143,3 +143,7 @@ ORDER BY geo_level;
 The choice between these approaches depends on the specific requirements of your data warehouse, including how frequently the hierarchy changes and whether you need to support multiple hierarchical views.
 
 Many of the standard hierarchy analysis requests can then be handled by standard SQL, without resorting to SQL language extensions.
+
+## References
+
+- Lecture notes from Business Analytics course, Prof. Paolo Menna, University of Verona 2024-2025
