--- a/data/blog/data-modeling.mdx
+++ b/data/blog/data-modeling.mdx
@@ -13,7 +13,7 @@ seriesOrder: 3
 
 ## Data Modeling
 
-**Data modeling** is the **process** of creating a conceptual representation of data and its relationships, which helps us understand how data is stored, accessed, updated, and queried within the database. The **output of that process** is a formal description of the data that has been modeled, which is called a data model. A data model can be compared to a roadmap, an architect's blueprint, or any formal diagram that facilitates a deeper understanding of what is being designed **[[1]](https://www.ibm.com/topics/data-modeling)**
+**Data modeling** is the **process** of creating a conceptual representation of data and its relationships, which helps us understand how data is stored, accessed, updated, and queried within the database. The **output of that process** is a formal description of the data that has been modeled, which is called a data model. A data model can be compared to a roadmap, an architect's blueprint, or any formal diagram that facilitates a deeper understanding of what is being designed **[IBM Data Modeling](https://www.ibm.com/topics/data-modeling)**
 
 - **A conceptual data model** consists of **highly abstract levels of data elements called entities and relationships** between entities. It presents a high-level overview of the database system through a visual representation of the entities it contains and their relationships to one another. The conceptual model provides the basis for the logical data model.
 - **A logical data model** builds on the conceptual model by **providing a more detailed overview of the entities in their respective relationships**. It identifies the attributes of each entity, defines the primary keys, and specifies the foreign keys. The logical data model serves as an intermediary between the high-level conceptual model and the physical implementation. It describes how the data will be organized in the database and provides a blueprint for building the physical database.
