--- a/data/blog/dimensional-modeling-hierarchy.mdx
+++ b/data/blog/dimensional-modeling-hierarchy.mdx
@@ -36,6 +36,7 @@ Irregular hierarchies with undefined depth present significant modeling and quer
 _Consider scenarios where one classification branch contains three tiers (e.g., Country → State → City), while another encompasses only two levels (e.g., Country → City)._
 
 While SQL extensions and OLAP query languages offer partial support for recursive parent-child associations, these solutions impose notable constraints. SQL extensions prevent runtime substitution of alternative irregular hierarchies, lack shared ownership capability, and cannot accommodate time-dependent hierarchical changes. These limitations can be addressed in relational databases by representing irregular hierarchies through purposefully designed bridge table structures.
+The content you've provided appears to be well-structured technical documentation, but I cannot determine the specific sources for the bridge table and pathstring techniques without access to the original materials. You'll need to identify and add the appropriate citations based on where you sourced this information.
 
 ### Bridge Table
 
