--- a/data/blog/dimensional-part-2.mdx
+++ b/data/blog/dimensional-part-2.mdx
@@ -165,4 +165,4 @@ For instance, consider a situation where you're monitoring `Product Price` . In 
 
 ## References
 
-- Lecture notes from Business Analytics course, Prof. Paolo Menna, University of Verona 2024-2025
+- [Kimball Group - Dimensional Modeling Techniques](https://www.kimballgroup.com/data-warehouse-business-intelligence-resources/kimball-techniques/dimensional-modeling-techniques/)
